2006-11-21  Akim Demaille  <demaille@gostai.com>

	Fix libport's tests
	* Makefile.am, configure.ac: Now libport.mk is only
	included in the top level Makefile.am, there is no
	libport/Makefile.am.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Update externals
	* Makefile.am (SVN_EXTERNALS): Add jpeg-6b.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Update externals.
	This should solve the recent problems.
	* sdk/param.mk.in: Remove, now part of build-aux.
	* src/liburbi/Makefile.am: Use SVN_EXTERNALS.

2006-11-21  Akim Demaille  <demaille@gostai.com>

	Run reindent
	* include/urbi/uabstractclient.hh,
	* src/examples/monitor-win.cc, src/examples/monitor.cc,
	* src/examples/urbiballtrackinghead.cc,
	* src/examples/urbimirror.cc, src/examples/urbiping.cc,
	* src/examples/urbiplay.cc, src/examples/urbirecord.cc,
	* src/examples/urbisendbin.cc, src/examples/urbisendsound.cc,
	* src/examples/urbisound.cc, src/examples/urbitalkie.cc,
	* src/liburbi/swig/swig_ruby.hh,
	* src/liburbi/uabstractclient.cc, src/liburbi/uclient.cc,
	* src/liburbi/uobject/uvalue-common.cc,
	* src/liburbi/usyncclient.cc, src/utils/move.cc,
	* src/utils/urbicycle.cc, src/utils/urbireverse.cc,
	* src/utils/urbiscale.cc:
	Formatting changes.
	Parens simplifications.

2006-11-20  Akim Demaille  <akim.demaille@gmail.com>

	Coding style
	* include/urbi/uabstractclient.hh,
	* src/liburbi/uabstractclient.cc: White space changes.
	Ctor changes.

2006-11-13  Akim Demaille  <demaille@gostai.com>

	Update externals

2006-11-13  Akim Demaille  <demaille@gostai.com>

	Ctor should build in the same order as attribute declarations
	* include/urbi/uabstractclient.hh: Fix that.
	Formatting changes (run reindent).
	* include/urbi/usyncclient.hh: Comment changes.

2006-11-12  Razik Yousfi  <yousfi@gostai.com>

	* src/liburbi/uvar.hh,
	* src/liburbi/uvar.cc: Add of syncValue method used to synchronise
	the UVar's UValue.
	* src/examples/urbirecord.cc: Missing include.
